tests/machine/x/c/basic_compare.error
line: 0
error: output mismatch
-- got --
7
122306568
122306568
-- want --
7
true
true
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:47Z
