tests/machine/x/c/basic_compare.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:47Z
#include <stdio.h>
#include <stdlib.h>

int main() {
  int a = 10 - 3;
  int b = 2 + 2;
  printf("%d\n", a);
  printf("%d\n", (a == 7) ? "true" : "false");
  printf("%d\n", (b < 5) ? "true" : "false");
  return 0;
}
